[build-system]
requires      = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name        = "oc-skill"
version     = "0.1.0"
description = "Opalstack API skill plugin for OpenClaw"
requires-python = ">=3.11"
dependencies    = ["requests>=2.31"]

[project.optional-dependencies]
dev = ["pytest", "responses"]

[tool.setuptools.packages.find]
where = ["."]
include = ["oc_skill*"]
